# cargo-stripe

./: .gitignore  Cargo.toml  LICENSE  README.md  components.json  main.py  pyproject.toml  split_stripe_openapi.py
split_openapi_refined/: account.txt  account_links.yml  account_sessions.yml  accounts.yml  apple_pay.yml  application_fees.yml  apps.yml  balance.yml  balance_transactions.yml  billing.yml  billing_portal.yml  charges.yml  checkout.yml  climate.yml  confirmation_tokens.yml  country_specs.yml  coupons.yml  credit_notes.yml  customer_sessions.yml  customers.yml  disputes.yml  entitlements.yml  ephemeral_keys.yml  events.yml  exchange_rates.yml  external_accounts.yml  file_links.yml  files.yml  financial_connections.yml  forwarding.yml  identity.yml  invoice_payments.yml  invoice_rendering_templates.yml  invoiceitems.yml  invoices.yml  issuing.yml  link_account_sessions.yml  linked_accounts.yml  mandates.yml  payment_intents.yml  (+33 more)
src/: components.rs  core.rs  main.rs
src/commands/: add.rs  init.rs
src/templates/: error.rs  ids.rs  mod.rs  params.rs  resources.rs
src/templates/client/: http_client.rs  mod.rs  request_strategy.rs  stripe.rs  stripe_client.rs  tokio.rs
src/templates/components/: charge.rs  customer.rs  payment_intent.rs  price.rs  product.rs  refund.rs  subscription.rs
src/templates/core/: client.rs  error.rs  mod.rs  types.rs
src/templates/resources/: account_ext.rs  balance_ext.rs  balance_transaction_ext.rs  charge_ext.rs  checkout_session_ext.rs  credit_note_ext.rs  currency.rs  customer_ext.rs  invoice_ext.rs  (+17 more)
src/utils/: fs.rs
