[package]
name = "cargo-stripe"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for adding Stripe API components to Rust projects"
license = "MIT"
repository = "https://github.com/geddle/cargo-stripe"
readme = "README.md"
keywords = ["stripe", "api", "sdk", "cli"]
categories = ["command-line-utilities", "api-bindings"]

# This is a cargo subcommand, so the binary must be named cargo-stripe
[[bin]]
name = "cargo-stripe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
fs_extra = "1.3"
tera = "1.19"
pathdiff = "0.2"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.28", features = ["full"] }